--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.1.0'
     //工具类扩展函数
-    implementation 'com.nx.android.components:tools:0.0.2'
+//    implementation 'com.nx.android.components:tools:0.0.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0'
-    implementation project(path: ':components_ui')
+//    implementation project(path: ':components_ui')
+    implementation project(path: ':components_tools')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
