--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.4.30"
     repositories {
         google()
         jcenter()
@@ -10,7 +10,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,20 +22,6 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
-        maven {
-            url 'https://packages.aliyun.com/maven/repository/2018734-snapshot-wIEIqP/'
-            credentials {
-                username '5f181a1799d2094b1a15916c'
-                password 'Oq]IHGy0K=g7'
-            }
-        }
-        maven {
-            url 'https://packages.aliyun.com/maven/repository/2018734-release-ypxruC/'
-            credentials {
-                username '5f181a1799d2094b1a15916c'
-                password 'Oq]IHGy0K=g7'
-            }
-        }
     }
 }
 
