--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -8,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.components.tools"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -16,6 +15,13 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "0.1.0-dev14"
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -32,13 +38,18 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.1.0'
+
+    implementation 'androidx.ui:ui-layout:0.1.0-dev14'
+    implementation 'androidx.ui:ui-material:0.1.0-dev14'
+    implementation 'androidx.ui:ui-tooling:0.1.0-dev14'
+
     //工具类扩展函数
 //    implementation 'com.nx.android.components:tools:0.0.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0'
 //    implementation project(path: ':components_ui')
-    implementation project(path: ':components_tools')
+//    implementation project(path: ':components_tools')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
