独立成模块

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
+include ':components-thread'
+include ':components-expand'
+include ':activityThreadHook'
 include ':app'
-include ':components_tools'
+include ':components-tools'
 rootProject.name = "Components"
