--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,13 @@ android {
     }
 
     buildFeatures {
-        compose true
+//        compose true
     }
 
-    composeOptions {
-        kotlinCompilerExtensionVersion "0.1.0-dev14"
-    }
+//    composeOptions {
+//        kotlinCompilerExtensionVersion "0.1.0-dev14"
+//    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -39,15 +40,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.1.0'
 
-    implementation 'androidx.ui:ui-layout:0.1.0-dev14'
-    implementation 'androidx.ui:ui-material:0.1.0-dev14'
-    implementation 'androidx.ui:ui-tooling:0.1.0-dev14'
+//    implementation 'androidx.ui:ui-layout:0.1.0-dev14'
+//    implementation 'androidx.ui:ui-material:0.1.0-dev14'
+//    implementation 'androidx.ui:ui-tooling:0.1.0-dev14'
 
     //工具类扩展函数
 //    implementation 'com.nx.android.components:tools:0.0.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0'
+    implementation project(path: ':activityThreadHook')
 //    implementation project(path: ':components_ui')
 //    implementation project(path: ':components_tools')
     testImplementation 'junit:junit:4.12'
