--- a/components-thread/build.gradle
+++ b/components-thread/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.forJrking'
 version = '0.0.1'
