--- a/components-tools/build.gradle
+++ b/components-tools/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 //apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.github.forJrking'
+group = 'com.github.forJrking'
 
 //ext {
 //    POM_NAME = "TEST"
@@ -23,12 +23,12 @@ group='com.github.forJrking'
 //apply from: "https://raw.githubusercontent.com/forJrking/maven/master/upload_maven.gradle"
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "30.0.0"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -51,7 +51,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+//    implementation Deps.kotlinStdlibJdk7
+    implementation Deps.coreKtx
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     compileOnly 'com.google.code.gson:gson:2.8.6'
