--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,13 +44,11 @@ dependencies {
 //    implementation 'androidx.ui:ui-material:0.1.0-dev14'
 //    implementation 'androidx.ui:ui-tooling:0.1.0-dev14'
 
-//    Found artifact: com.github.forJrking:activityThreadHook:0.0.1
-//    Found artifact: com.github.forJrking:components-expand:0.0.1
-//    Found artifact: com.github.forJrking:components-tools:-96ca995f95-1
-
     //工具类扩展函数
-//    implementation 'com.github.forJrking:activityThreadHook:+'
-//    implementation 'com.github.forJrking:components-expand:+'
+    implementation 'com.github.forJrking.Components:ui-recycleview:0.0.2'
+    implementation 'com.github.forJrking.Components:activityThreadHook:0.0.2'
+    implementation 'com.github.forJrking.Components:components-thread:0.0.2'
+    implementation 'com.github.forJrking.Components:components-expand:0.0.2'
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
