--- a/ui-recycleview/src/main/AndroidManifest.xml
+++ b/ui-recycleview/src/main/AndroidManifest.xml
@@ -1,3 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.forJrking.expand">
-</manifest>
+    package="com.github.forJrking.recyclerview"/>
