--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     implementation 'com.github.forJrking.Components:ui-recycleview:0.0.5'
     implementation 'com.github.forJrking.Components:activityThreadHook:0.0.5'
     implementation 'com.github.forJrking.Components:components-thread:0.0.5'
-    implementation 'com.github.forJrking.Components:components-expand:0.0.5'
-
+//    implementation 'com.github.forJrking.Components:components-expand:0.0.5'
+    implementation project(path: ':components-expand')
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:+'
