--- a/components-tools/build.gradle
+++ b/components-tools/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 //apply plugin: 'kotlin-android-extensions'
-//apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.forJrking'
+version = '0.0.1'
 
 //ext {
 //    POM_NAME = "TEST"
