--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,19 +39,20 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    ext.ver = '1.2.0' //please move this code to a unified place.
+    implementation "androidx.appcompat:appcompat:$ver"
     implementation 'androidx.constraintlayout:constraintlayout:+'
 
 //    implementation 'androidx.ui:ui-layout:0.1.0-dev14'
 //    implementation 'androidx.ui:ui-material:0.1.0-dev14'
 //    implementation 'androidx.ui:ui-tooling:0.1.0-dev14'
-
+    ext.core = '0.0.7'
     //工具类扩展函数
-    implementation 'com.github.forJrking.Components:ui-recycleview:0.0.7'
-    implementation 'com.github.forJrking.Components:activityThreadHook:0.0.7'
-    implementation 'com.github.forJrking.Components:components-thread:0.0.7'
-    implementation 'com.github.forJrking.Components:components-expand:0.0.7'
-    implementation 'com.github.forJrking.Components:components-tools:0.0.7'
+    implementation "com.github.forJrking.Components:ui-recycleview:$core"
+    implementation "com.github.forJrking.Components:activityThreadHook:$core"
+    implementation "com.github.forJrking.Components:components-thread:$core"
+    implementation "com.github.forJrking.Components:components-expand:$core"
+    implementation "com.github.forJrking.Components:components-tools:$core"
 //    implementation project(path: ':components-expand')
 //    implementation project(path: ':activityThreadHook')
 //    implementation project(path: ':components_ui')
